--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,8 @@
 development:
-  adapter: postgresql
-  database: elk_sports
-  username: elk_sports
-  password: elk_sports
-  encoding: unicode
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
+  timeout: 5000
 
 test: &test
   adapter: sqlite3
